--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ plugins:
 # Site settings
 url: 'https://mydomain.com'
 baseurl: ''
-title: 'My website'
+title: 'Po-Lin Chen'
 description: 'This is my new website'
 permalink: pretty
-logo: "https://www.gravatar.com/avatar/6c0377abcf4da91cdd35dea4554b2a4c?s=52"
+logo: "assets/images/ntu_logo.jpg"
 
 # Pagination
 paginate: 5
-paginate_path: blog/page:num
+paginate_path: project/page:num
 
 # Header nav
 navigation_header:
@@ -38,8 +38,14 @@ navigation_header:
   url: /
 - title: About
   url: /about/
+- title: Publication
+  url: /publication/
+- title: Project
+  url: /project/
 - title: Blog
   url: /blog/
+- title: Contact
+  url: /contact/
 
 # Footer nav
 navigation_footer:
@@ -49,12 +55,25 @@ navigation_footer:
 # Collections
 collections:
   posts:
-    title: Posts
+    title: My recent works
     output: true
     description: "My thoughts and ideas"
     feature_text: |
       Welcome to my blog
     feature_image: "https://picsum.photos/2560/600?image=866"
+    permalink: /blog/:title/
+
+  
+  projects:
+    title: My recent works
+    output: true
+    description: "My thoughts and ideas"
+    feature_text: |
+      Welcome to my project
+    feature_image: "https://picsum.photos/2560/600?image=866"
+    permalink: /project/:title/
+
+
 
 # Collection settings
 defaults:
@@ -64,6 +83,12 @@ defaults:
       type: "posts"
     values:
       layout: post # Set the default layout for posts
+  -
+    scope:
+      path: ""
+      type: "projects"
+    values:
+      layout: project # Set the default layout for projects
   -
     scope:
       path: ""
